# federated-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
database/: Cargo.toml
database/src/: postgres.rs
pathway/: .env  Cargo.toml  build.rs  docker-compose.yml
pathway/migrations/2022-08-14-162200_create_pathway_table/: down.sql  up.sql
pathway/src/: main.rs  schema.rs
user/: .env  Cargo.toml  docker-compose.yml
user/migrations/2022-08-14-162200_create_user_table/: up.sql
user/src/: main.rs  schema.rs
user/src/database/: mod.rs
