[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
# async-graphql = { version = "4.0.16", features = ["uuid", "chrono"]}
# async-graphql-poem = "4.0.16"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.2", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"] }
dotenvy = "0.15.6"
poem = { version = "1.3.47" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }